# sms/API/servers_handler/export_excel.go
@@ -1,15 +1,77 @@
 package servers_handler
 
 import (
+	"log"
 	"net/http"
 	"sms/object"
+	elastic_query "sms/server/database/elasticsearch/query"
+	"sort"
 
 	"github.com/gin-gonic/gin"
 	"github.com/xuri/excelize/v2"
 )
 
-// ExportServersToExcel exports server data to an Excel file and sends it as a download
-func ExportServersToExcel(c *gin.Context, servers []object.Server) {
+// @Tags         Servers
+// @Summary      Export server data to Excel
+// @Description  Export server data to an Excel file with optional filtering and ordering
+// @Accept       json
+// @Produce      json
+// @Param        order query string false "Order of results, either 'asc' or 'desc'. If not provided or using the wrong order format, the default order is ascending"
+// @Param        filter query string false "Filter by server_id, server_name, ipv4, or status. If not provided or using the wrong filter format, the default filter is server_name"
+// @Param        string path string false "Substring to search in server_id, server_name, ipv4, or status"
+// @Success      200 {object} object.ImportExcelResponse "Excel file exported successfully"
+// @Router       /servers/export_excel/{order}/{filter}/{string} [get]
+func ExportDataToExcel(c *gin.Context) {
+	var servers []object.Server
+	order := c.Query("order")
+	if order != "asc" && order != "desc" {
+		order = "asc" // Default order if not specified
+	}
+	filter := c.Query("filter")
+	str := c.Param("string")
+	log.Printf("Received request to export server with filter '%s' and substring: '%s'", filter, str)
+	if str == "undefined" || str == "{string}" {
+		str = ""
+	}
+	log.Printf("Received request to export server with filter '%s' and substring: '%s'", filter, str)
+	var httpStatus int = 200
+	switch filter {
+	case "server_id":
+		servers, httpStatus = elastic_query.GetServerByIdSubstr(str)
+	case "server_name":
+		servers, httpStatus = elastic_query.GetServerByNameSubstr(str)
+	case "ipv4":
+		servers, httpStatus = elastic_query.GetServerByIPv4Substr(str)
+	case "status":
+		servers, httpStatus = elastic_query.GetServerByStatus(str)
+	}
+	if httpStatus == http.StatusNotFound {
+		c.JSON(http.StatusOK, gin.H{"message": "No servers found with the given requirements"})
+		return
+	} else if httpStatus != http.StatusOK {
+		c.JSON(httpStatus, gin.H{"error": "Failed to retrieve server details"})
+		return
+	}
+
+	// Sort the servers based on the filter and order
+	sort.Slice(servers, func(i, j int) bool {
+		var less bool
+		switch filter {
+		case "server_id":
+			less = servers[i].ServerId < servers[j].ServerId
+		case "status":
+			less = servers[i].Status < servers[j].Status
+		case "ipv4":
+			less = servers[i].IPv4 < servers[j].IPv4
+		default: // Default to sorting by server_name
+			less = servers[i].ServerName < servers[j].ServerName
+		}
+		if order == "desc" {
+			return !less
+		}
+		return less
+	})
+
 	f := excelize.NewFile()
 	sheet := "Sheet1"
 	f.SetSheetName("Sheet1", sheet)
@@ -43,5 +105,7 @@ func ExportServersToExcel(c *gin.Context, servers []object.Server) {
 	// Write file to response
 	if err := f.Write(c.Writer); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to export Excel"})
+		return
 	}
+	c.JSON(http.StatusOK, gin.H{"message": "Excel file exported successfully"})
 }
