# sms/docs/swagger.yaml
@@ -253,6 +253,37 @@ paths:
       summary: Delete a server by ID
       tags:
       - Servers
+  /servers/export_excel/{order}/{filter}/{string}:
+    get:
+      consumes:
+      - application/json
+      description: Export server data to an Excel file with optional filtering and
+        ordering
+      parameters:
+      - description: Order of results, either 'asc' or 'desc'. If not provided or
+          using the wrong order format, the default order is ascending
+        in: query
+        name: order
+        type: string
+      - description: Filter by server_id, server_name, ipv4, or status. If not provided
+          or using the wrong filter format, the default filter is server_name
+        in: query
+        name: filter
+        type: string
+      - description: Substring to search in server_id, server_name, ipv4, or status
+        in: path
+        name: string
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Excel file exported successfully
+          schema:
+            $ref: '#/definitions/object.ImportExcelResponse'
+      summary: Export server data to Excel
+      tags:
+      - Servers
   /servers/import_excel:
     post:
       consumes:
